* tracks price in list alignment fixed
Former-commit-id: aaa830b8022ffa54cc6e2cc3eacc0ee2c3fd292e
Former-commit-id: 5b6c3666dbe25bd6ee464a042e883884f63b6326

--- a/PVT.Q1.2017.Shop/PVT.Q1.2017.Shop/Content/tracks.css
+++ b/PVT.Q1.2017.Shop/PVT.Q1.2017.Shop/Content/tracks.css
@@ -695,8 +695,11 @@ li > input { width: 100% }
 
 .tracks-list .btn-play { float: left }
 
-.track-edit ul li input { height: 30px; }
+.tracks-list .right {
+      margin-top: 19px;
+}
 
+.track-edit ul li input { height: 30px; }
 
 .track-edit audio { width: 100%; }
 
